# vaudeville_rpg

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LLM_IMPROVEMENTS.md  PROGRESS.md  README.md  WIKI.md  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_add_item_system_tables.py  002_rework_to_procedural_effect_system.py  003_add_player_system_tables.py  004_add_duel_system_tables.py  005_add_dungeon_system_tables.py  006_add_turn_phase_to_duels.py  007_add_pending_generations_table.py  008_add_fresh_stacks_to_combat_state.py  06eb078065ea_add_cascade_to_dungeon_foreign_keys.py
src/vaudeville_rpg/: __init__.py  __main__.py  config.py
src/vaudeville_rpg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vaudeville_rpg/bot/: __init__.py  app.py  utils.py
src/vaudeville_rpg/db/: __init__.py  engine.py
src/vaudeville_rpg/engine/: __init__.py  actions.py  conditions.py  duel.py  effects.py  interrupts.py  logging.py  turn.py  types.py
src/vaudeville_rpg/llm/: __init__.py  client.py  factory.py  generators.py  parser.py  schemas.py  setting_factory.py  validators.py
src/vaudeville_rpg/services/: __init__.py  content_generation.py  duels.py  dungeons.py  enemies.py  players.py  (+1 more)
tests/: __init__.py  conftest.py  test_bot_ux.py  test_combat_logging.py  test_dungeon_rewards.py  test_engine.py  test_fresh_stacks.py  test_generation.py  test_integration_duels.py  test_interrupts.py  test_json_parsing.py  test_logging_integration.py  test_rating.py  test_settings_service.py  test_validators.py
(+17 files in other folders)
